# ask

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ask-terminal-prd.md
.github/workflows/: ci.yml
man/: ask.1
src/: api.rs  config.rs  error.rs  intent.rs  main.rs
src/handlers/: ai.rs  config.rs  explain.rs  howto.rs  mod.rs  prompt.rs  system.rs
src/providers/: anthropic.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  streaming.rs
tests/: integration.rs
