[package]
name = "ask"
version = "0.1.0"
edition = "2021"
description = "A multi-purpose CLI query tool bridging Unix and AI"
authors = ["ask contributors"]
license = "MIT"

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
futures = "0.3"
colored = "2.1"
atty = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
