[package]
name = "ask-cmd"
version = "0.3.1"
edition = "2021"
rust-version = "1.70"
description = "AI-powered CLI assistant - modern Unix meets AI"
authors = ["ask contributors"]
license = "MIT"
repository = "https://github.com/askterminal-dev/ask"
homepage = "https://github.com/askterminal-dev/ask"
readme = "README.md"
keywords = ["cli", "ai", "llm", "assistant", "terminal"]
categories = ["command-line-utilities"]

[[bin]]
name = "ask"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
regex = "1.10"
once_cell = "1.19"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
colored = "2.1"
rpassword = "7.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
